@@ -4,6 +4,8 @@ Changes in stable release 2.4.18 (not released yet)
 
 * Corrected rebooting the machine in FvwmScript-Quit.
 
+* Fixed the FlickeringMoveWorkaround option to the BugOpts command.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.17 (10-Oct-2003)
