@@ -1,3 +1,9 @@
+2004-02-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
+	(moveLoop):
+	fixed the FlickeringMoveWorkaround option which did nothing before
+
 2003-10-11  Mikhael Goikhman  <migo@homemail.com>
 
 	* configure.in:
